--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.6.3",
     "next": "15.2.4",
+    "next-intl": "^4.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
