--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@heroicons/react": "^2.2.0",
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.6.3",
-    "next": "15.2.4",
+    "next": "^15.2.6",
     "next-intl": "^4.0.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-markdown": "^10.1.0",
     "web-vitals": "^4.2.4"
   },
